Mon Apr 23 09:56:05 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: fix portability issue

Fri Apr 20 15:26:15 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor1.c src/odbc/unittests/cursor2.c:
	* src/odbc/unittests/scroll.c:
	- make valgrind more happy if Sybase is used

Fri Apr 20 11:13:40 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/timeout4.c(added):
	- add a test for timeout
	- fix timeout on prepare (not detected)
	- fix timeout if connection broken

Thu Apr 19 11:11:55 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor1.c src/odbc/unittests/cursor2.c:
	* src/odbc/unittests/scroll.c:
	- give only warning for Sybase

Thu Apr 19 10:45:15 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- say we not still support cursors for sybase

Wed Apr 18 16:28:29 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO.freddy include/tdsodbc.h src/odbc/odbc.c:
	* src/odbc/odbc_util.c src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- fix cursor updates

Mon Apr 16 22:08:07 EDT 2007	JK Lowden <jklowden@freetds.org>
	* src/apps/bsqlodbc.c ODBC3 conformant 

Sun Apr 15 10:01:36 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix leak

Fri Apr 13 17:27:20 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: cursor update

Fri Apr 13 17:22:25 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/query.c:
	- add cursor update to libTDS

Fri Apr 13 10:08:07 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/bsqlodbc.c:
	- catch all error
	- fix some memory problems

Thu Apr 12 15:33:15 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/funccall.c:
	- add test from ML

Thu Apr 12 15:07:09 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>